# cmd/api/docs/swagger.json
@@ -246,7 +246,7 @@
                 "summary": "Get All Books",
                 "responses": {
                     "200": {
-                        "description": "User activated success",
+                        "description": "Fetched Books successfully",
                         "schema": {
                             "$ref": "#/definitions/main.GetBooksResponse"
                         }
@@ -314,6 +314,45 @@
             }
         },
         "/v1/books/{id}": {
+            "get": {
+                "description": "Get Specific Book By ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Books"
+                ],
+                "summary": "Get Book By ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Book ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User activated success",
+                        "schema": {
+                            "$ref": "#/definitions/main.BookResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Book not found",
+                        "schema": {
+                            "$ref": "#/definitions/main.GeneralErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.InternalServerErrorResponse"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Delete Book",
                 "produces": [
